Fixed bug #35634 (Erroneous "Class declarations may not be nested" error raised). (Carl P. Corliss)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@227021 c90b9560-bf6c-de11-be94-00142212c4b1